--- a/pages/subpages/mall/catering/subpages/meal-ticket-order-check/index.wxss
+++ b/pages/subpages/mall/catering/subpages/meal-ticket-order-check/index.wxss
@@ -92,6 +92,9 @@
   margin-left: 12rpx;
   color: #999;
 }
+.tips-content.blue {
+  color: var(--blue-1);
+}
 .more-icon {
   width: 24rpx;
   height: 24rpx;
