feat: 商品订单确认

--- a/pages/subpages/mall/goods/subpages/order-check/components/pickup-address-popup/index.wxml
+++ b/pages/subpages/mall/goods/subpages/order-check/components/pickup-address-popup/index.wxml
@@ -11,7 +11,7 @@
           </view>
           <view class="distance row" bindtap="navigation" data-index="{{index}}">
             <view>{{item.distance}}千米</view>
-            <image class="arrow" src="/images/arrow.png" />
+            <image class="arrow" src="../../images/arrow.png" />
           </view>
         </view>
       </radio-group>
