--- a/pages/subpages/mall/goods/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxss
@@ -127,10 +127,19 @@
   width: 32rpx;
   height: 32rpx;
 }
-.pickup-address-detail {
+.pickup-address-detail-wrap {
   margin-top: 12rpx;
+}
+.pickup-address-detail {
+  flex: 1;
   color: #999;
   font-size: 24rpx;
+}
+.pickup-address-icon {
+  margin-top: -2rpx;
+  margin-right: 4rpx;
+  width: 28rpx;
+  height: 28rpx;
 }
 
 .distance-info-wrap {
@@ -190,32 +199,6 @@
   height: 64rpx;
   border-radius: 8rpx;
 }
-
-/* .distance-icon {
-  width: 28rpx;
-  height: 28rpx;
-}
-.distance {
-  margin-left: 2rpx;
-  color: var(--blue-1);
-  font-size: 26rpx;
-}
-.check-map-btn {
-  display: flex;
-  align-items: center;
-  margin-left: 12rpx;
-  padding-left: 12rpx;
-  height: 28rpx;
-  color: #333;
-  font-size: 26rpx;
-  line-height: 1;
-  border-left: 1px solid #eee;
-}
-.address-arrow {
-  margin-left: 6rpx;
-  width: 20rpx;
-  height: 20rpx;
-} */
 
 .pickup-info-wrap {
   display: flex;
