--- a/pages/subpages/mine/components/ticket-item/index.wxml
+++ b/pages/subpages/mine/components/ticket-item/index.wxml
@@ -13,7 +13,7 @@
           catchtap="checkQRcode"
           data-id="{{item.id}}"
         >
-          查看券码
+          入园凭证
         </view>
       </view>
     </view>
