--- a/pages/subpages/mine/order/index.wxss
+++ b/pages/subpages/mine/order/index.wxss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   background: #fff;
+  border-radius: 0 0 32rpx 32rpx;
   z-index: 100;
 }
 
@@ -20,7 +21,6 @@
   width: 340rpx;
   height: 36px;
   border-radius: 18px;
-  background: #fff;
   border: 0.5px solid #e1e1e1;
 }
 .search-icon {
@@ -35,24 +35,19 @@
 }
 
 .menu-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
   padding: 0 8rpx;
-  width: 100%;
   height: 50px;
-  background: #fff;
-  border-top: 1px solid #f5f6f8;
 }
 .menu-item {
   position: relative;
-  padding: 8rpx 30rpx;
-  color: #212121;
-  font-size: 14px;
+  width: 120rpx;
+  height: 60rpx;
+  color: #141925;
+  font-size: 26rpx;
   font-weight: 500;
-  background: #f7f7f7;
+  background: #f8f8f8;
   border-radius: 24rpx;
-  border: 1px solid #f7f7f7;
+  border: 1px solid #f8f8f8;
 }
 .menu-item.selected {
   position: relative;
@@ -62,30 +57,27 @@
 }
 
 .sub-menu-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 32rpx;
-  width: 100%;
-  height: 44px;
-  background: #fff;
-  border-top: 1px solid #f5f6f8;
+  margin: 0 24rpx;
+  padding: 0 8rpx;
+  padding-bottom: 2px;
+  height: 50px;
+  border-top: 0.5px solid #f5f6f8;
 }
 .sub-menu-item {
   position: relative;
   padding: 0 2px;
   height: 20px;
   color: #666;
-  font-size: 14px;
+  font-size: 28rpx;
 }
 .sub-menu-item.selected {
   position: relative;
-  color: var(--blue-1);
+  color: #141925;
   font-weight: bold;
 }
 .sub-menu-item.selected::after {
   position: absolute;
-  bottom: -6px;
+  bottom: -4px;
   left: 50%;
   transform: translateX(-50%);
   width: 15px;
