--- a/pages/subpages/mine/components/ticket-item/index.wxss
+++ b/pages/subpages/mine/components/ticket-item/index.wxss
@@ -1,139 +1,65 @@
-.ticket {
-  border-radius: 18rpx;
-  border: 1px solid #eee;
-}
-
-.main-info {
-  padding: 24rpx;
-  padding-bottom: 8rpx;
-}
 .ticket-name {
-  margin-bottom: 12rpx;
   color: #333;
   font-size: 32rpx;
   font-weight: bold;
 }
 
-.scenic-list {
-  position: relative;
-  margin-top: 18rpx;
-  margin-bottom: 24rpx;
-  padding: 0 18rpx;
-  border-radius: 18rpx;
-  background: #f5f6f8;
+.validity-time-wrap {
+  margin-top: 12rpx;
+  color: #666;
+  font-size: 24rpx;
 }
-.scenic-list::before {
-  position: absolute;
-  top: -12rpx;
-  left: 24rpx;
-  width: 0;
-  height: 0;
-  content: "";
-  border-left: 12rpx solid transparent;
-  border-right: 12rpx solid transparent;
-  border-bottom: 12rpx solid #f5f6f8;
+.validity-time-desc {
+  margin-left: 16rpx;
+  color: var(--blue-1);
+}
+
+.ticket-tips-wrap {
+  margin-top: 12rpx;
+}
+.ticket-tips {
+  display: flex;
+  align-items: center;
+  margin-right: 12rpx;
+  padding: 0 6rpx;
+  height: 32rpx;
+  color: #666;
+  font-size: 20rpx;
+  border: 0.5px solid #e1e1e1;
+  border-radius: 4rpx;
+}
+
+.scenic-title {
+  margin-top: 32rpx;
+  color: #666;
+  font-size: 26rpx;
+}
+.scenic-list {
+  margin-top: 16rpx;
 }
 .scenic-item {
-  padding: 18rpx 0;
-  border-bottom: 1px solid #eee;
+  margin-bottom: 40rpx;
 }
 .scenic-item:last-child {
-  border-bottom: none;
+  margin-bottom: 0;
 }
 .scenic-cover {
-  width: 50rpx;
-  height: 50rpx;
+  width: 60rpx;
+  height: 60rpx;
   border-radius: 12rpx;
 }
 .scenic-name {
   margin-left: 18rpx;
   flex: 1;
-  color: #333;
-  font-size: 26rpx;
-  font-weight: bold;
-}
-.qr-code-btn {
-  padding: 0 24rpx;
-  height: 50rpx;
-  color: #fff;
-  font-size: 22rpx;
-  line-height: 50rpx;
-  background: var(--blue-1);
-  border-radius: 12rpx;
-}
-
-.count-wrap {
-  font-size: 24rpx;
-  color: var(--blue-1);
-}
-.count {
-  margin-left: 5rpx;
-  font-size: 28rpx;
+  color: #141925;
+  font-size: 30rpx;
   font-weight: 500;
 }
-
-.split-line {
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: 32rpx;
-}
-.line {
-  width: 100%;
-  border-top: 1px dashed #eee;
-}
-.left-circle, .right-circle {
-  position: absolute;
-  top: 0;
-  width: 16rpx;
-  height: 32rpx;
-  border: 1px solid #eee;
-  background: #fff;
-}
-.left-circle {
-  left: -1px;
-  border-top-right-radius: 16rpx;
-  border-bottom-right-radius: 16rpx;
-  border-left-color: #fff;
-}
-.right-circle {
-  right: -1px;
-  border-top-left-radius: 16rpx;
-  border-bottom-left-radius: 16rpx;
-  border-right-color: #fff;
-}
-
-.ticket-tips {
-  padding: 24rpx;
-  padding-top: 8rpx;
-}
-.tips-wrap {
-  margin-bottom: 8rpx;
-}
-.tips-wrap:last-child {
-  margin-bottom: 0;
-}
-.tips-icon {
-  margin-right: 8rpx;
-  width: 32rpx;
-  height: 32rpx;
-}
-.tips {
-  padding-right: 12rpx;
-  border-right: 1px solid #ddd;
-  margin-right: 12rpx;
-  color: #666;
-  font-size: 22rpx;
-  line-height: 1;
-}
-.tips:last-child {
-  border-right: none;
-}
-.tips.stress {
-  color: var(--blue-1);
-}
-.right-arrow {
-  margin-left: 2rpx;
-  width: 20rpx;
-  height: 20rpx;
+.qr-code-btn {
+  width: 160rpx;
+  height: 60rpx;
+  color: #333;
+  font-size: 26rpx;
+  border-radius: 30rpx;
+  border: 0.5px solid #e1e1e1;
 }
