--- a/pages/subpages/mine/merchant/subpages/scenic-order/components/order-item/index.wxss
+++ b/pages/subpages/mine/merchant/subpages/scenic-order/components/order-item/index.wxss
@@ -8,7 +8,14 @@
 .order-header {
   font-size: 28rpx;
 }
-.contact-btn {
+.user-avatar {
+  margin-right: 16rpx;
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+}
+.user-name {
+  flex: 1;
   color: #333;
   font-weight: 500;
 }
