--- a/pages/subpages/mine/order/components/hotel-order-item/index.wxss
+++ b/pages/subpages/mine/order/components/hotel-order-item/index.wxss
@@ -9,13 +9,13 @@
   font-size: 28rpx;
 }
 
-.shop-logo {
-  margin-right: 16rpx;
+.hotel-cover {
+  margin-right: 12rpx;
   width: 40rpx;
   height: 40rpx;
   border-radius: 50%;
 }
-.shop-name {
+.hotel-name {
   flex: 1;
   color: #333;
   font-weight: 500;
