--- a/pages/subpages/mall/hotel/subpages/hotel-detail/components/room-item/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/components/room-item/index.wxss
@@ -17,7 +17,7 @@
 }
 .cancellable-status {
   margin-top: 12rpx;
-  color: #1dc3c1;
+  color: var(--blue-4);
   font-size: 24rpx;
 }
 .cancellable-status.uncancellable {
