--- a/pages/subpages/mine/components/room-item/index.wxss
+++ b/pages/subpages/mine/components/room-item/index.wxss
@@ -15,6 +15,9 @@
   font-size: 30rpx;
   font-weight: 500;
 }
+.room-name.show-hotel-name {
+  font-size: 28rpx;
+}
 
 .room-detail-wrap {
   flex: 1;
