--- a/pages/subpages/mine/order/components/set-meal-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/set-meal-order-item/index.wxml
@@ -4,7 +4,7 @@
 <view class="order-item" catchtap="navToDetail">
   <view class="order-header row between">
     <view class="shop-info row" catchtap="navToShop">
-      <image class="shop-logo" src="{{item.shopLogo}}" />
+      <image class="shop-logo" src="{{item.shopLogo}}" mode="aspectFill" lazy-load />
       <view class="shop-name omit single">{{item.shopName}}</view>
       <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
     </view>
@@ -43,6 +43,13 @@
         取消订单
       </button>
       <button 
+        class="btn" 
+        catchtap="navToDetail"
+        hover-class="none"
+      >
+        查看详情
+      </button>
+      <button 
         class="btn active" 
         wx:if="{{item.status === 101}}" 
         catchtap="payOrder"
@@ -71,13 +78,6 @@
         hover-class="none"
       >
         评价
-      </button>
-      <button 
-        class="btn" 
-        catchtap="navToDetail"
-        hover-class="none"
-      >
-        查看详情
       </button>
     </view>
   </view>
