--- a/pages/subpages/mine/components/meal-ticket-item/index.wxss
+++ b/pages/subpages/mine/components/meal-ticket-item/index.wxss
@@ -1,75 +1,50 @@
-.ticket {
-  border-radius: 18rpx;
-  border: 1px solid #eee;
+.restaurant-cover {
+  width: 184rpx;
+  height: 184rpx;
+  border-radius: 16rpx;
 }
-
-.main-info {
-  padding: 24rpx;
-  padding-bottom: 8rpx;
-}
-.restaurant-name {
-  margin-bottom: 12rpx;
-  color: #333;
-  font-size: 24rpx;
+.ticket-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 24rpx;
+  flex: 1;
+  height: 188rpx;
 }
 .ticket-name {
-  margin-bottom: 12rpx;
+  margin-bottom: 8rpx;
   color: #333;
   font-size: 32rpx;
   font-weight: bold;
 }
+.ticket-name.show-restaurant-name {
+  font-size: 28rpx;
+}
+.ticket-tips {
+  color: #999;
+  font-size: 22rpx;
+}
+
 .count-wrap {
+  color: #999;
   font-size: 24rpx;
-  color: var(--blue-1);
 }
 .count {
   margin-left: 5rpx;
   font-size: 28rpx;
-  font-weight: 500;
 }
 
-.split-line {
-  position: relative;
-  display: flex;
-  align-items: center;
+.limit-notice {
+  margin-top: 24rpx;
+  padding: 0 24rpx;
+  height: 68rpx;
+  color: var(--blue-4);
+  font-size: 26rpx;
+  background: rgb(198, 239, 255, 0.5);
+  border-radius: 18rpx;
+}
+.notice-icon {
+  margin-right: 8rpx;
+  width: 32rpx;
   height: 32rpx;
-}
-.line {
-  width: 100%;
-  border-top: 1px dashed #eee;
-}
-.left-circle, .right-circle {
-  position: absolute;
-  top: 0;
-  width: 16rpx;
-  height: 32rpx;
-  border: 1px solid #eee;
-  background: #fff;
-}
-.left-circle {
-  left: -1px;
-  border-top-right-radius: 16rpx;
-  border-bottom-right-radius: 16rpx;
-  border-left-color: #fff;
-}
-.right-circle {
-  right: -1px;
-  border-top-left-radius: 16rpx;
-  border-bottom-left-radius: 16rpx;
-  border-right-color: #fff;
-}
-
-.ticket-tips-wrap {
-  padding: 24rpx;
-  padding-top: 8rpx;
-}
-.ticket-tips {
-  margin-top: 12rpx;
-  font-size: 22rpx;
-}
-.tips-title {
-  font-weight: 500;
-}
-.tips-content {
-  margin-left: 12rpx;
 }
